--- a/mybatisapp/src/main/resources/static/stw/oldhtml/category_static.html
+++ b/mybatisapp/src/main/resources/static/stw/oldhtml/category_static.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>static</title>
+    <title>Static Html</title>
 </head>
 <body>
-
+    Static Html
 </body>
 </html>
